--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "@types/styled-components": "^5.1.26",
+    "@types/react-modal": "^3.16.0",
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
+    "react-modal": "^3.16.1",
     "react-youtube": "^10.1.0",
     "typescript": "5.0.4"
   }
